infra/07-endpoint.tf
# resource "aws_vpc_endpoint" "sts" {
#   vpc_id       = aws_vpc.main.id
#   service_name = "com.amazonaws.ap-northeast-2.sts"

# }

# resource "aws_vpc_endpoint" "dynamodb" {
#   vpc_id       = aws_vpc.main.id
#   service_name = "com.amazonaws.ap-northeast-2.dynamodb"
# }
